add auto leave feature

--- a/config/example_options.ini
+++ b/config/example_options.ini
@@ -119,6 +119,13 @@ NowPlayingMentions = no
 # the same server and have permission to join the channel.
 AutoSummon = yes
 
+# Automaticlly leave channel after few second if the channel is empty 
+AutoLeaveChannel = False
+
+# Idle time to leave channel
+AutoLeaveTime =  60
+
+
 # Start playing songs from the autoplaylist.txt file after joining a channel. This does not
 # stop users from queueing songs, you can do that by restricting command access in permissions.ini.
 UseAutoPlaylist = yes
