add ETA in np, put default radio limit in config

--- a/config/example_options.ini
+++ b/config/example_options.ini
@@ -125,6 +125,8 @@ AutoLeaveChannel = False
 # Idle time to leave channel
 AutoLeaveTime =  60
 
+# Default limit of automatically recommend song from youtube music
+RadioDefaultLimit = 5
 
 # Start playing songs from the autoplaylist.txt file after joining a channel. This does not
 # stop users from queueing songs, you can do that by restricting command access in permissions.ini.
